<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_soft">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_brain"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/text_FocusMind"
            android:layout_marginTop="25dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eslogan_message"
            android:textAlignment="center"
            android:textColor="@color/text_eslogan"
            android:layout_marginTop="18dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/background_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/todo_text1"
                    android:textColor="@color/text_ToDo"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/todo_text2"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_ToDo"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/todo_text3"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_ToDo"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/btn_text"
            android:backgroundTint="@color/btn_Background"
            android:textColor="@color/btn_text"
            android:layout_marginTop="28dp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/text_cuenta"
            android:textAlignment="center"
            android:textColor="@color/text_cuenta"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</ScrollView>