<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- SCROLL -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:src="@drawable/ic_back"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_main_tarea"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <!-- CARD PROGRESO -->
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/bg_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- CIRCULO -->
                <TextView
                    android:text="@string/text_cir"
                    android:textColor="@color/text_circle"
                    android:textStyle="bold"
                    android:background="@drawable/ic_count"
                    android:gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_steps_complete"
                        android:textColor="@color/text_circle_complete"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_steps_missing"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- LISTA -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_list_steps"
            android:textStyle="bold"
            android:layout_marginTop="14dp"/>


        <!-- ITEM COMPLETADO -->
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/sc_item1"
            app:strokeWidth="2dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardBackgroundColor="@color/bg_item">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_item1"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- ITEM NORMAL -->
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/bg_item">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_item2"
                android:padding="30dp"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/bg_item">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_item3"
                android:padding="30dp"/>
        </com.google.android.material.card.MaterialCardView>

        <!-- BOTON -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_focus"
            android:backgroundTint="@color/btn_bg_focus"
            android:textColor="@color/btn_text_focus"
            android:layout_marginTop="20dp"/>

        <!-- TIP -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tip"
            android:textColor="@color/text_tip"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

    </LinearLayout>


    </ScrollView>

    <include
        android:id="@+id/bottom_nav"
        layout="@layout/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>



