<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/btn_bg_navigation"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">

    <!-- Nav: Inicio -->
    <LinearLayout
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_op1"
            android:textSize="12sp"
            android:textColor="@color/text_inicio"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <!-- Nav: Tareas -->
    <LinearLayout
        android:id="@+id/nav_tasks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_tasks" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_op2"
            android:textSize="12sp"
            android:textColor="@color/text_inicio"
            android:layout_marginTop="2dp"/>

        <View
            android:layout_width="18dp"
            android:layout_height="3dp"
            android:background="@drawable/fondo_activo"
            android:layout_marginTop="3dp"/>
    </LinearLayout>

    <!-- Nav: Enfoque -->
    <LinearLayout
        android:id="@+id/nav_focus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_clock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_op3"
            android:textSize="12sp"
            android:textColor="@color/text_inicio"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <!-- Nav: Logros -->
    <LinearLayout
        android:id="@+id/nav_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_op4"
            android:textSize="12sp"
            android:textColor="@color/text_inicio"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_op5"
            android:textSize="12sp"
            android:textColor="@color/text_inicio"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

</LinearLayout>