<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/etTextoInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/text_welcome"/>

            <!-- PROGRESO -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_verde"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text2_activityPri"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text3_activityPri"
                    android:textSize="28sp"
                    android:textColor="@color/white"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:progress="40"
                    android:textColor="@color/text4_activityPri"
                    style="?android:attr/progressBarStyleHorizontal"/>

            </LinearLayout>

            <!-- TAREA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_blanco"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text5_activityPri"
                    android:textColor="@color/text5_activityPri"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text6_activityPri"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="4dp"
                    android:textColor="#bab7c8"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn1_text_activityPri"
                    android:backgroundTint="@color/btn1_bg_activityPri"
                    android:textColor="@color/btn1_text_activityPri"
                    android:layout_marginTop="12dp"/>

            </LinearLayout>

            <!-- ACCESOS -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text7_activityPri"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textColor="@color/text7_activityPri"/>

            <GridLayout
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <!-- TARJETA 1 -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardEnfoque"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/bg_tar1_activityPri"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/ic_aim"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_margin="10dp"
                            android:text="@string/text8_tar1_activityPri"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/text8_tar1_activityPri"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- TARJETA 2 -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardTareas"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/bg_tar2_activityPri"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/ic_task"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/text9_tar2_activityPri"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/text9_tar2_activityPri"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- TARJETA 3 -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardCrearTareas"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/bg_tar3_activityPri"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/ic_pencil"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/text10_tar3_activityPri"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/text10_tar3_activityPri"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- TARJETA 4 -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardMiTiempo"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/bg_tar4_activityPri"
                    android:clickable="true"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="30dp"
                            android:src="@drawable/ic_time"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/text11_tar4_activityPri"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:textColor="@color/text11_tar4_activityPri"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </GridLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>